Use options file Use version var in BSD script